--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -1,6 +1,8 @@
 {
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"prestart": "rm -rf dist/**/*",
+		"prebuild": "rm -rf dist/**/*",
 		"start": "parcel viewer/zip.html -d dist --public-url ./ --target node",
 		"build": "parcel build viewer/zip.html -d dist --public-url ./ --no-minify --target node"
 	},
