htmlをindexにリネーム

--- a/zip_viewer/manifest.json
+++ b/zip_viewer/manifest.json
@@ -16,7 +16,7 @@
                 "size": 400
             },
             "viewer": {
-                "path": "dist/zip.html"
+                "path": "dist/index.html"
             }
         }
     }
