--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -2,9 +2,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prestart": "rm -rf dist/**/*",
-		"prebuild": "rm -rf dist/**/*",
-		"start": "parcel viewer/zip.html -d dist --public-url ./ --target node",
-		"build": "parcel build viewer/zip.html -d dist --public-url ./ --no-minify --target node"
+		"start": "parcel viewer/index.html -d dist --public-url ./ --target node"
 	},
 	"devDependencies": {
 		"@types/react": "^19.0.1",
@@ -19,6 +17,7 @@
 		"file-type": "16.5.4",
 		"iconv-lite": "^0.6.3",
 		"lodash": "^4.17.21",
+		"parcel-bundler": "^1.12.5",
 		"pdfjs-dist": "3.1.81",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
