--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -26,5 +26,9 @@
 		"react-use": "^17.6.0",
 		"sharp": "^0.33.5",
 		"yauzl": "^3.2.0"
+	},
+	"engines": {
+		"npm": "Please use only pnpm.",
+		"yarn": "Please use only pnpm."
 	}
 }
