csv_viewerに型定義を適用

--- a/csv_viewer/manifest.json
+++ b/csv_viewer/manifest.json
@@ -12,7 +12,7 @@
     "preview": {
         "csv": {
             "viewer": {
-                "path": "dist/csv.html"
+                "path": "dist/index.html"
             }
         }
     }
