--- a/csv_viewer/package.json
+++ b/csv_viewer/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel viewer/csv.html -d dist --public-url ./",
-    "build": "parcel build viewer/csv.html -d dist --public-url ./ --no-minify"
+    "preinstall": "pnpm add -D ../@types:eagle",
+    "start": "parcel viewer/index.html -d dist --public-url ./ --target node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/eagle": "link:../@types:eagle",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "cssnano": "^7.0.6",
