--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"@types/eagle": "link:../@types/eagle",
 		"@types/file-type": "^10.9.3",
+		"@types/lodash": "^4.17.13",
 		"@types/node": "^22.10.2",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
