--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -3,7 +3,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prestart": "rm -rf dist/**/*",
 		"preinstall": "pnpm add -D ../@types/eagle",
-		"start": "parcel viewer/index.html -d dist --public-url ./ --target node"
+		"start": "parcel watch viewer/index.html --dist-dir dist --public-url ./"
 	},
 	"devDependencies": {
 		"@types/eagle": "link:../@types/eagle",
@@ -13,9 +13,22 @@
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
 		"@types/yauzl": "^2.10.3",
+		"assert": "^2.0.0",
+		"browserify-zlib": "^0.2.0",
+		"buffer": "^5.5.0||^6.0.0",
+		"crypto-browserify": "^3.12.0",
 		"cssnano": "^7.0.6",
+		"events": "^3.1.0",
+		"os-browserify": "^0.3.0",
+		"parcel": "^2.13.3",
+		"path-browserify": "^1.0.0",
 		"postcss": "^8.4.49",
-		"typescript": "^5.7.2"
+		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
+		"string_decoder": "^1.3.0",
+		"typescript": "^5.7.2",
+		"util": "^0.12.3",
+		"vm-browserify": "^1.1.2"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
@@ -28,13 +41,19 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
-		"react-router-dom": "^7.0.2",
+		"react-router": "^7.1.1",
 		"react-use": "^17.6.0",
 		"sharp": "^0.33.5",
 		"yauzl": "^3.2.0"
 	},
+	"targets": {
+		"default": {
+			"includeNodeModules": false
+		}
+	},
 	"engines": {
 		"npm": "Please use only pnpm.",
-		"yarn": "Please use only pnpm."
+		"yarn": "Please use only pnpm.",
+		"node": ">= 23"
 	}
 }
