前回開いていたファイルを表示

--- a/zip_viewer/manifest.json
+++ b/zip_viewer/manifest.json
@@ -17,6 +17,9 @@
             },
             "viewer": {
                 "path": "dist/index.html"
+            },
+            "inspector": {
+                "path": "dist/inspector.html"
             }
         }
     }
