--- a/zip_viewer/package.json
+++ b/zip_viewer/package.json
@@ -3,7 +3,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prestart": "rm -rf dist/**/*",
 		"preinstall": "pnpm add -D ../@types/eagle",
-		"start": "parcel watch viewer/index.html --dist-dir dist --public-url ./"
+		"start": "parcel watch viewer/index.html viewer/inspector.html --dist-dir dist --public-url ./ --no-cache"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "2.13.3",
