--- a/@types/eagle/package.json
+++ b/@types/eagle/package.json
@@ -8,5 +8,8 @@
   "types": "types/eagle.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3"
   }
 }
